cmake_minimum_required(VERSION 3.20)
project(DataStructures408Cpp C CXX)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_C_STANDARD 11)
set(CMAKE_C_STANDARD_REQUIRED ON)

add_executable(data_structures_408 main.cpp)
add_executable(sq_list_delete_min linear_list/sq_list_delete_min.cpp)
add_executable(sq_list_reverse linear_list/sq_list_reverse.cpp)
add_executable(sq_list_delete_x linear_list/sq_list_delete_x.cpp)
add_executable(sq_list_delete_range linear_list/sq_list_delete_range.cpp)
add_executable(sq_list_unique_sorted linear_list/sq_list_unique_sorted.cpp)
add_executable(sq_list_merge_sorted linear_list/sq_list_merge_sorted.cpp)
