cmake_minimum_required(VERSION 3.20)
project(DataStructures408Cpp C CXX)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_C_STANDARD 11)
set(CMAKE_C_STANDARD_REQUIRED ON)

add_executable(data_structures_408 main.cpp)
add_executable(sq_list_delete_min linear_list/sq_list_delete_min.cpp)
add_executable(sq_list_reverse linear_list/sq_list_reverse.cpp)
add_executable(sq_list_delete_x linear_list/sq_list_delete_x.cpp)
add_executable(sq_list_delete_range linear_list/sq_list_delete_range.cpp)
add_executable(sq_list_unique_sorted linear_list/sq_list_unique_sorted.cpp)
add_executable(sq_list_merge_sorted linear_list/sq_list_merge_sorted.cpp)
add_executable(array_swap_two_lists linear_list/array_swap_two_lists.cpp)
add_executable(sq_list_search_exchange_insert linear_list/sq_list_search_exchange_insert.cpp)
add_executable(three_sorted_sequences_common linear_list/three_sorted_sequences_common.cpp)
add_executable(array_left_rotate linear_list/array_left_rotate.cpp)
add_executable(two_sorted_sequences_median linear_list/two_sorted_sequences_median.cpp)
add_executable(array_majority_element linear_list/array_majority_element.cpp)
add_executable(array_first_missing_positive linear_list/array_first_missing_positive.cpp)
add_executable(three_sets_min_distance linear_list/three_sets_min_distance.cpp)
